--- a/source/_posts/微信小程序 - 获取图片页面上展示的宽高.md
+++ b/source/_posts/微信小程序 - 获取图片页面上展示的宽高.md
@@ -69,3 +69,17 @@ Page({
 </swiper>
 ```
 到这里，就算是结束了。
+
+**2019.02.03更新：**
+
+今天发现还有一种更加简单的方法：这里的目的是要获取图片在页面的实际高度，然后将 swiper 组件的高度也设置成为这个高度，这样轮播图看起来就很协调了。
+在我们将 image 组件的 mode="widthFix" 之后，image 会加上一个 height 的属性：如图所示：
+![效果图](/medias/postimages/26.png "效果图")
+这里的高度是 210px，也就是说图片的高度自适应之后的高度为210px，这个高度就是 swiper 组件需要的高度，但是有一点，如果直接将这个高度写给 swiper 组件，那么在别的设备中又会出现问题，因为别的设备中，图片的高度又会发生变化，所以，这里应该将 px 转换为 rpx，这样就可以适用所有的屏幕，我们测试用的是 iphone6，所以转化为 rpx，就是 420rpx。
+此时，只需要将 swiper 组件的高度设置为 420rpx 就可以了，不需要做其它的计算。
+```css
+swiper {
+  height: 420rpx;
+}
+```
+这样做比上面那种方法要简单很多，不过有一点，如果你换了其它尺寸的图片，那么你又要重新去换算一下，不过这样也很简单，省时间。
