--- a/source/_posts/微信小程序 - 重点总结.md
+++ b/source/_posts/微信小程序 - 重点总结.md
@@ -836,7 +836,7 @@ Component({
   color: #f00;
 }
 ```
-实测确实可以，不过我觉得没必要，而且我觉得腾讯也不鼓励开发者怎么做，至于我为什么会发现这个问题呢，因为我在用 vant-weapp 这个 UI 库开发的时候碰到这种组件里面套组件，就看了源代码发现了，这个时候我想在 app.wxss 中修改这个库中的某些样式，发现不能生效，结果一看，是样式名变了，在页面内影响不到，所以就只能看结构里面的 class 名，然后用这个名字去写样式。真的是曲折啊...
+实测确实可以，不过我觉得没必要，而且我觉得腾讯也不鼓励开发者这么做，至于我为什么会发现这个问题呢，因为我在用 vant-weapp 这个 UI 库开发的时候碰到这种组件里面套组件，就看了源代码发现了，这个时候我想在 app.wxss 中修改这个库中的某些样式，发现不能生效，结果一看，是样式名变了，在页面内影响不到，所以就只能看结构里面的 class 名，然后用这个名字去写样式。真的是曲折啊...
 
 
 
