--- a/source/_posts/清除浮动的几种方法.md
+++ b/source/_posts/清除浮动的几种方法.md
@@ -2,7 +2,7 @@
 title: 清除浮动的几种方法
 date: 2018-07-25 22:12:33
 author: huangkuiwei
-img: http://pic.appvv.com/e410f4c07f84a45d5e78f4fc7a709b54/175.png
+img: http://oshup.com/wp-content/uploads/2018/04/Learn-HTML5-and-CSS3-languages-for-Dummies.jpg
 tags: 
     - HTML
     - CSS
